# OLMOCR-Arkindex-Worker

./: .cookiecutter.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  tox.ini
arkindex/: olmocr.yml
ci/: build.sh
tests/: conftest.py  test_worker.py
worker_olmocr/: worker.py
